src/Surfnet/StepupMiddleware/ManagementBundle/Tests/Validator/Fixtures/invalid_configuration/not_array_email_templates.php
<?php

return [
    'expectedError' => 'Property "email_templates" must have an object as value',
    'expectedPropertyPath' => 'email_templates',
    'configuration' => [
        'gateway' => [],
        'raa' => [],
        'sraa' => [],
        'email_templates' => null,
    ]
];
